# potential

./: .clang-format  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  README.md  config.cmake  dependency.cmake  pkg.yaml
.chglog/: config.yml
benchmarks/: CMakeLists.txt  eam_find_spline.cpp  main.cpp
examples/: CMakeLists.txt  main.c  main.cpp
src/: CMakeLists.txt  atom_type.h  atom_type_lists.cpp  atom_type_lists.h  building_config.h.in  eam.cpp  eam.h  eam_c_api.cpp  eam_c_api.h  eam_one_way.cpp  eam_one_way.h  eam_parser.cpp  eam_parser.h  eam_phi.cpp  eam_phi.h  interpolation_lists.hpp  interpolation_object.cpp  interpolation_object.h  pot-config.cmake.in  pot_table_loader.cpp  pot_table_loader.h  types.cpp  types.h  utils.h
src/container/: atom_type_lists.cpp  atom_type_lists.h  interpolation_lists.hpp  interpolation_object.h  linear_array.hpp
src/data_structure/: array_map.hpp
src/parser/: eam_base_parser.hpp  funcfl_parser.cpp  funcfl_parser.h  parser.cpp  parser.h  setfl_parser.cpp  setfl_parser.h
tests/: .gitignore  CMakeLists.txt
tests/unit/: CMakeLists.txt  app_test.cpp  atom_type_lists_test.cpp  eam_alloy_pot_api_test.cpp  eam_fs_pot_api_test.cpp  eam_pot_fixture.hpp  eam_pot_linear_fixup.hpp  gtest_env.h  interpolation_lists_sync_test.cpp  main.cpp  potential_loader_test.cpp  test_config.h.in
tests/unit/container/: linear_array_test.cpp
tests/unit/data_structure/: array_map_test.cpp
tests/unit/parser/: api_setFilterEleTypes_test.cpp  setfl_parser_test.cpp
